<resources>
    <string name="app_name">Marco Polo</string>
    <string name="facebook_app_name">marco-polo-app</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="marco">Marco</string>
    <string name="recentMarcos">Your Recent Marcos</string>

    <!-- Menu Strings -->
    <string name="notifications">Notifications</string>
    <string name="friends">Friends</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Expandable Menu Test Area -->
    <string-array name="dept_array">
        <item>Vegetable</item>
        <item>Fruits</item>
        <item>Grocery</item>
        <item>Electronics</item>
        <item>Books</item>
        <item>Language</item>
    </string-array>
    <string name="polo_prompt">Do you want to Polo back?</string>

    <!-- Account settings activity strings -->
    <string name="title_activity_account_settings">My Account</string>

    <!-- Friends list activity strings -->
    <string name="title_activity_friends">Friends</string>

    <!-- App settings activity strings -->
    <string name="title_activity_app_settings">Settings</string>

    <!-- Privacy policy activity strings -->
    <string name="title_activity_notifications">Notifications</string>

    <!-- Privacy policy activity strings -->
    <string name="title_activity_privacy_policy">Privacy Policy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="facebook_app_id">359143984533075</string>
    <string name="fb_login_protocol_scheme">fb359143984533075</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="signed_in_fmt">Signed in as: %s</string>

    <string name="logo">Marco Polo Logo</string>

    <string name="account_name">You are currently logged in as:</string>
    <string name="account_email">Linked Google Email:</string>

    <string name="current_user"></string>
    <string name="send">Send</string>
    <string name="polo">Polo</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="marco_title">Send a Marco</string>
    <string name="quick_marco_title">Polo a Public Marco</string>
    <string name="polo_title">Polo back!</string>
    <string name="message_blank">empty message</string>
    <string name="nulled_object">This polo has nulled out; ignore it</string>
    <string name="marco_switch_public">Public</string>
    <string name="marco_switch_private">Private</string>
    <string name="marco_message_hint">What would you like to say?</string>
    <string name="marco_friends_list">Choose the friends to Marco:</string>

    <!--Web Application Client ID for authenticating with Google-->
    <string name="server_client_id">736384937236-g8i7jp2e64icddv79grql1haosjkbhd0.apps.googleusercontent.com</string>

    <!--Error Handling-->
    <string name="has_active_polo">You currently have an active polo, please cancel it before marcoing!</string>
    <string name="duplicate_marco">You already have a Marco!\nCreating a new Marco will overwrite the current one.</string>
    <string name="empty_friends_list">Your friends list is empty.\nTry sending a public marco!</string>
    <string name="empty_message">You have to enter a message!</string>
    <string name="add_self">You can\'t add yourself as a friend!</string>
    <string name="add_already_exists">"This person is already your friend!</string>
    <string name="block_self">You can\'t block yourself!</string>
    <string name="block_already_exists">"This person is already blocked!</string>
    <string name="add_blocked">"You have blocked this user!\nUnblock them first to add as a friend.</string>

    <!-- Settings Activity Prompts -->
    <string name="sync_prompt">Syncing your contacts to your account will add any existing users\nwho
        currently have an account here to your friends list.\n
        Do you want to sync your phone contacts to your friends list?</string>
    <string name="delete_marco_prompt">Do you want to delete your current Marco?</string>
    <string name="header_logo">Header Logo</string>

    <!-- Help Activity Strings -->
    <string name = "help_about">
        Marco Polo is a location enabled social app, designed to make meeting up with your friends easier!\n
    </string>
    <string name = "help_marco">
        To share your location with a friend you can send them a Marco. There are two types of Marcos, public and private.\n
    </string>
    <string name = "help_public">
        A public Marco will be shared with everyone that uses the Marco Polo App.\n
        To create a public marco tap Marco on the main page and enter a description of the event you are marking.\n
        Keep in mind you may only have one public Marco at a time.\n
    </string>
    <string name = "help_private">
        A private Marco will be shared only with the people that you choose. To create a private Marco tap Marco on the main page and tap the switch at the top.\n
        Then you can enter a message to send with your location.\n
        Finally you may select the friends that you wish to send the Marco to!\n
        A few things to keep in mind:\n
            \t\t Your friends will have to Polo back to you to signify that they will be joining you.\n
            \t\t If you do not have any friends you can not send a private Marco.\n
    </string>
    <string name = "help_polo">
        When a friend sends you a Marco you will need to let them know if you will be joining them.\n
        In order to do this, you can tap "accept" from the dialog box that pops up when you receive a private Marco.\n
        You can also Polo to any recent Marcos through your Notifications.
    </string>
    <string name = "help_friends">
        To add friends you may select Friends from the main menu and search for them by name or email address. \n
        If you allow this app to access your contacts then Marco Polo will attempt to automatically add contacts that also use the app to your friends list. \n
        Please note that the app may not find all friends in your contacts automatically. \n
    </string>

    <string name="current_meetup">Active Meetups</string>
    <string name="DummyUser">User</string>
    <string name="NoUser">No Profile</string>
    <string name="Username">Username:</string>
    <string name="about_me_from_facebook">We can pull this from your facebook profile or feel free to write something new! </string>
    <string name="FacebookProfile">Facebook Profile Attached</string>
    <string name="GoogleProfile">Google Profile Attached</string>
    <string name="Logout">Logout</string>
    <string name="notification_window_icon">Notification Window Icon</string>
    <string name="delete_my_marco">Delete</string>
    <string name="sync_contacts">Sync Contacts</string>
    <string name="sign_out">Sign out</string>
    <string name="my_marco">My Marco:</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="linked_account">linked account</string>
    <string name = "help_icons">
        Here are the icons! They do stuff!
    </string>

    <string name="sync_function">You have the option to sync contacts from your phone through your My Account page.  We will find any emails \nin
    your contact list that currently have accounts with us.</string>
    <string name="sender">From:</string>
    <string name="message">Marco:</string>

</resources>
