<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_account"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/account" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_privacy_policy"
        android:icon="@android:drawable/ic_lock_idle_lock"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

</menu>