<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/streetGray">

    <TextView
        android:id="@+id/marco_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:text="@string/quick_marco_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/message_text"
        android:layout_width="220sp"
        android:inputType="none"
        android:layout_height="50sp"
        android:layout_marginTop="50sp"
        android:maxLength="255"
        android:layout_centerHorizontal="true"
        android:background="@color/streetGray"
        android:gravity="top|start"
        android:hint="@string/message_blank"
        android:textColor="@color/veryDarkGray" />

    <EditText
        android:id="@+id/marcoText"
        android:layout_width="220sp"
        android:layout_height="160sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:maxLength="252"
        android:background="@color/streetGray"
        android:gravity="top|start"
        android:hint="@string/marco_message_hint"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="14dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelMarco"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="12dp"
            android:onClick="onClickCancelMarco"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sendMarco"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="12dp"
            android:onClick="onClickSendMarco"
            android:text="@string/send"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>